tests/positive/basic/strings/input.ci
void main() {
    string a = "Hello";
    string b = " World";
    string c = a + b;
    print(c + "\n");
}
