tests/negative/semantic/byte_logical_operator_error/input.ci
void main() {
    byte a = 1;
    byte b = 0;
    bool r = a && b;
}
